--- a/app/index.html
+++ b/app/index.html
@@ -24,9 +24,10 @@
     <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li class="active"><a ng-href="#">Home</a></li>
-          <li><a ng-href="#/about">About</a></li>
-          <li><a ng-href="#">Contact</a></li>
+          <li ng-class="{active: activetab=='/home'}"><a ng-href="#/home">Home</a></li>
+          <li ng-class="{active: activetab=='/order'}"><a ng-href="#/order">Order</a></li>
+          <li ng-class="{active: activetab=='/contact'}"><a ng-href="#/contact">Contact</a></li>
+          <li ng-click="logout()"><a ng-href="#/logout">Logout</a></li>          
         </ul>
         <h3 class="text-muted">demoApp</h3>
       </div>
@@ -74,8 +75,9 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/logout.js"></script>
+        <script src="scripts/controllers/contact.js"></script>
+        <script src="scripts/controllers/order.js"></script>
         <script src="scripts/controllers/home.js"></script>
         <script src="scripts/controllers/login.js"></script>        
         <!-- endbuild -->
