--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
           <li ng-class="{active: activetab=='/home'}"><a ng-href="#/home">Home</a></li>
           <li ng-class="{active: activetab=='/order'}"><a ng-href="#/order">Order</a></li>
           <li ng-class="{active: activetab=='/contact'}"><a ng-href="#/contact">Contact</a></li>
-          <li ng-click="logout()"><a ng-href="#/logout">Logout</a></li>          
+          <li><a>Logout</a></li>          
         </ul>
         <h3 class="text-muted">demoApp</h3>
       </div>
@@ -75,7 +75,6 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/logout.js"></script>
         <script src="scripts/controllers/contact.js"></script>
         <script src="scripts/controllers/order.js"></script>
         <script src="scripts/controllers/home.js"></script>
