--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
     <!-- Add your site or application content here -->
     <div class="navbar navbar-inverse navbar-static-top">
     <div class="container">
-      <a href="#" class="navbar-brand text-muted">E-Z Delivery</a>
+      <a href="#/home" class="navbar-brand text-muted">E-Z Delivery</a>
 
       <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
         <span class="icon-bar"></span>
