add contact us page

--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li ng-class="{active: activetab=='/home'}"><a ng-href="#/home">Home</a></li>
           <li ng-class="{active: activetab=='/order'}"><a ng-href="#/order">Order</a></li>
-          <li ng-class="{active: activetab=='/contact'}"><a ng-href="#/contact">Contact</a></li>
+          <li ng-class="{active: activetab=='/contact'}"><a ng-href="#/contact">Contact Delivery</a></li>
         </ul>
       </div>
 
